hphp/test/zend/good/ext/date/tests/bug37368.php
<?php
date_default_timezone_set('UTC');
echo date("r", strtotime("Mon, 08 May 2006 13:06:44 -0400 +30 days"));
?>